# dating_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
config/: logging.conf.yml  settings.py
consumer/: __main__.py  app.py  metrics.py  web_app.py
consumer/api/: metrics.py
consumer/handlers/: change_form.py  create_form.py  delete_profile.py  event_distribution.py  find_candidates.py  get_likes.py  get_popular_users.py  get_profile.py  like_user.py  rating.py  watch_matches.py
consumer/storage/: celery.py  db.py
migrations/: env.py
migrations/versions/: 1c821254e678_initial_tables.py  998090292a7f_add_is_mutual_column_to_likes_table.py  aa478a3b703c_add_on_delete.py
script/: calculate_ratings.py
src/: app.py  bot.py  log.config.py  logger.py  metrics.py
src/api/: metrics.py  webhook.py
src/handlers/callback/: __init__.py  change_form.py  create_form.py  delete_form.py  get_popular_users.py  liked_profiles.py  match_flow.py  rating.py  watch_matches.py
src/handlers/command/: __init__.py  gender.py  get_profile.py  main_menu.py  menu.py  start.py  watch_matches.py
src/handlers/state/: change_form.py  like_profile.py  made_form.py  match_flow.py  popular_user.py  show_next_user.py
src/model/: __init__.py  meta.py  model.py
src/schemas/: README.md
src/storage/: db.py  minio.py
src/templates/: candidate_card.jinja2  env.py  menu.jinja2  profile.jinja2  start.jinja2
tests/: conftest.py
tests/common/: conftest.py
tests/common/tg/: test_get_profile.py
tests/mocking/: minio.py  rabbit.py  tg.py
