[tool.poetry]
name = "dating-bot"
version = "0.1.0"
description = ""
authors = ["Artem09076 <grigoranartem592@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.19.0"
pydantic-settings = "^2.8.1"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
aio-pika = "^9.5.5"
msgpack = "^1.1.0"
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
alembic = "^1.15.2"
minio = "^7.2.15"
pyyaml = "^6.0.2"
colorama = "^0.4.6"
prometheus-client = "^0.21.1"
celery = {extras = ["asyncio"], version = "^5.5.1"}
redis = "^5.2.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiohttp = "^3.11.18"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

[tool.pytest.ini_options]
python_functions =  ""
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
